<resources>
    <string name="nameValidation">abcdefghijklmnopqrstuvwxyz ABCDEFGHIJKLMNOPQRSTUVWXYZ0123456789_.#</string>
    <string name="gstinValidation">abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ0123456789</string>
    <string name="passwordValidation">abcdefghijklmnopqrstuvwxyz ABCDEFGHIJKLMNOPQRSTUVWXYZ0123456789_.#@</string>
    <string name="notification_paper_count_dialog">Notification</string>
    <string name="notification">Notification</string>
    <string name="org_name">Supplier\'s Firm Name*</string>
    <string name="org_name_title">Supplier\'s Firm Name</string>
    <string name="serial_no">S.No</string>
    <string name="item_name_title">Item Name</string>
    <string name="mrp">MRP</string>
    <string name="po_no">PO No.</string>
    <string name="firm_name_title">Firm Name</string>
    <string name="gin_status">GIN Status</string>
    <string name="select_all">Select All</string>
    <string name="supplier_gstin">Supplier GSTIN</string>
    <string name="supplier_address_title">Supplier Address</string>
    <string name="supplier_state_code">Supplier StateCode</string>
    <string name="all_items">All Items</string>
    <string name="additional_amount">Additional Amount</string>
    <string name="grand_total">Grand Total</string>
    <string name="generate_po">Generate PO</string>
    <string name="update_po">Update PO</string>
    <string name="purchase_order">Purchase Order</string>
    <string name="add_item">Add Item</string>
    <string name="igst">IGST</string>
    <string name="cgst">CGST</string>
    <string name="utgst_sgst">UTGST/SGST</string>
    <string name="cess">cess</string>
    <string name="additional_charge">Additional Charge</string>
    <string name="additional_charge_name">Additional Charge Name</string>
    <string name="additional_charge_name_mandatory">Additional Charge Name*</string>
    <string name="invoice_no">Invoice No</string>
    <string name="invoice_date">Invoice Date</string>
    <string name="goods_inward_note">Goods Inward Note</string>
    <string name="save_note">Save Note</string>
    <string name="goods_inward">Goods Inward</string>
    <string name="amount_eligible_to_reward_pt">Amount Eligible for Reward Points</string>
    <string name="amt_equivalent_to_reward_pts">Amount Equivalent to Reward Points</string>
    <string name="amt_equivalent_to_one_reward_pts">Amount Equivalent to 1 Reward Point</string>
    <string name="min_reward_pts_to_redeem">Minimum Reward Points to Redeem</string>
    <string name="please_enter_in_amount">Please enter in amount.</string>
    <string name="active_item">Active Item</string>
    <string name="inactive_item">Inactive Item</string>
    <string name="link_item">Link Item</string>
    <string name="unlink_item">Unlink Item</string>
    <string name="delink_item">Delink Item</string>
    <string name="cgst_rate_per">CGST Rate(%)</string>
    <string name="cess_rate_per">cess Rate(%)</string>
    <string name="utgst_sgst_rate_per">UTGST/SGST Rate(%)</string>
    <string name="igst_rate_per">IGST Rate(%)</string>
    <string name="pur_rate">Pur Rate</string>
    <string name="avg_pur_rate">Avg. Pur Rate</string>
    <string name="supplier_info">Supplier Information</string>
    <string name="add_new_supplier">Add New Supplier</string>
    <string name="delete_supplier">Delete Supplier(s)</string>
    <string name="supplier_name_report">Supplier\'s Firm Name</string>
    <string name="supplier_name">Supplier\'s Firm Name*</string>
    <string name="gstin">GSTIN</string>
    <string name="phone_no">Phone No</string>
    <string name="barcode">Barcode</string>
    <string name="supplier_phone">Supplier Phone</string>
    <string name="supplier_address">Address</string>
    <string name="short_code_empty">Short Code can not be empty for Item Name  </string>
    <string name="short_code_invalid">Please Enter Short Code as integer for Item Name  </string>
    <string name="insufficient_information_csv">Please enter all the required data  </string>
    <string name="item_short_name_empty">Item Name can not be empty for Short Code  </string>
    <string name="item_short_name_invalid">Please Enter Item Name as character for Short Code  </string>
    <string name="item_short_code_invalid">Menu Code can only be in integers.  </string>
    <string name="item_long_name_invalid">Please Enter Item Name as character for Short Code  </string>
    <string name="supply_type_empty">Supply Type can not be empty for Item Name  </string>
    <string name="supply_type_invalid">Please Enter Supply Type as character for Item Name  </string>
    <string name="rate_empty">Rate can not be empty for Item Name  </string>
    <string name="rate_invalid">Please Enter Rate as decimal for Item Name  </string>
    <string name="retail_price_empty">Retail Price can not be empty for Item Name  </string>
    <string name="retail_price_invalid">Please Enter Retail Price as decimal for Item Name  </string>
    <string name="mrp_empty">MRP can not be empty for Item Name  </string>
    <string name="mrp_invalid">Please Enter MRP as decimal for Item Name  </string>
    <string name="whole_sale_price_empty">Whole Sale Price can not be empty for Item Name  </string>
    <string name="whole_sale_price_invalid">Please Enter Whole Sale Price as decimal for Item Name  </string>
    <string name="hsn_invalid">Please Enter HSN as numeric for Item Name  </string>
    <string name="min_stock_invalid">Please Enter Minimum Stock as decimal for Item Name  </string>
    <string name="cess_amount_invalid">Please Enter cess amount as decimal for Item Name  </string>
    <string name="add_cess_amount_invalid">Please Enter additional cess amount as decimal for Item Name  </string>
    <string name="purchase_rate_invalid">Please Enter Purchase Rate as decimal for Item Name  </string>
    <string name="favorite_invalid">Please Enter Favorite as 0 or 1 for Item Name  </string>
    <string name="active_invalid">Please Enter active/inactive as 0 or 1 for Item Name  </string>
    <string name="image_invalid">Please valid image URL for Item Name  </string>
    <string name="same_item_same_mrp">Duplicate Item: Same item short name, barcode and UOM cannot exist with same MRP  </string>
    <string name="same_item_different_uom">Same items cannot exist with different UOM  </string>
    <string name="app_name">JOYPOS F&amp;B</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_login">WeP_FnB_GST</string>
    <string name="error_configuration">Please configure serial port first</string>
    <string name="error_security">You do not have read/write permission to the serial port.</string>
    <string name="error_unknown">The serial port can not be opened for an unknown reason.</string>
    <string name="title_activity_sales_report">SalesReportActivity</string>
    <string name="title_activity_reports_tab">ReportsTabActivity</string>
    <string name="title_activity_fast_selling_report">FastSellingReportActivity</string>
    <string name="title_activity_upload_file_picker">UploadFilePickerActivity</string>
    <string name="title_activity_tax_config_sub">TaxConfigSubActivity</string>
    <string name="apply">Apply</string>
    <string name="share">Share</string>
    <string name="share_bill">Share Bill</string>
    <string name="item_info">Item Information</string>
    <string name="tax_info">GST Tax Rates</string>
    <string name="image_and_status">Image &amp; Status</string>
    <string name="retail_price_greater_than_mrp">Retail price cannot be greater than MRP for item  </string>
    <string name="wholesale_price_greater_than_retail_price">Wholesale price cannot be greater than retail price for item  </string>
    <string name="either_cess_rate_or_amount">Please enter either cess Rate or cess Amount  </string>
    <string name="add_cess_amount">Additional cess Amount</string>
    <string name="cgst_rate">CGST Rate</string>
    <string name="cess_rate">cess Rate</string>
    <string name="sgst_rate">SGST Rate</string>
    <string name="igst_rate">IGST Rate</string>
    <string name="cgst_amount">CGST Amount</string>
    <string name="cess_amount">cess Amount</string>
    <string name="discount_amount">Discount Amount</string>
    <string name="discount_percent">Discount%</string>
    <string name="wholesale_price">Rate 3</string>
    <string name="purchase_rate">Purchase Rate</string>
    <string name="department">Department</string>
    <string name="category">Category</string>
    <string name="add_new_item">Add New Item</string>
    <string name="fav">Fav</string>
    <string name="itemNameMessage">Kindly enter item short name </string>
    <string name="itemUOMMessage">Kindly select item UOM </string>
    <string name="itemRetailPriceMessage">Kindly enter item retail price </string>
    <string name="retailPriceGreaterThanMRPError">Retail Price cannot be greater than MRP</string>
    <string name="wholePriceGeaterThanRetailError">Wholesale Price cannot be greater than retail price</string>
    <string name="cessRateAndcessAmountBothError">Please enter either cess Rate or cess Amount</string>
    <string name="search_items_name_barcode_short_code">Barcode,ItemName or ShortCode</string>
    <string name="search_brand_categ_dept">Brand,Department and Category</string>
    <string name="short_code">Short Code</string>
    <string name="zero">0</string>
    <string name="billing_add">+</string>
    <string name="generate_csv">Generate CSV</string>
    <string name="browse_file">Browse File</string>
    <string name="upload_file">Upload File</string>
    <string name="file_path">File Path:</string>
    <string name="select_file">Select File</string>
    <string name="in_active">Inactive</string>
    <string name="all">All</string>
    <string name="name">Name</string>
    <string name="mode">Mode</string>
    <string name="uom_item">UOM</string>
    <string name="export_csv">Export CSV</string>
    <string name="sample_csv">Sample CSV</string>
    <string name="kitchen">Kitchen</string>
    <string name="retail_price">Rate 1</string>
    <string name="min_stock">Minimum Stock</string>
    <string name="active">Active</string>
    <string name="quantity">Quantity</string>
    <string name="date">Date</string>
    <string name="clear">Clear</string>
</resources>